[Bug #164927648] Remove extra white space
Remove extra white space"

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -25,7 +25,6 @@ html, body{
   overflow-x: hidden !important;
 }
 body {
-  min-width: 635px !important;
   font-size: 1em;
   line-height: 1.4;
   font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
@@ -135,9 +134,7 @@ section .transaction_message p {
     max-width: 100%;
     overflow-x: hidden;
   }
-  body {
-    width: 90vw !important;
-  }
+  
   .account_details {
     flex-shrink: 1 !important;
     width: 90vw !important;
